[project]
name = "download-video"
version = "0.1.0"
description = "CLI tool to download YouTube videos with subtitles, thumbnails, and metadata"
requires-python = ">=3.12"
dependencies = ["yt-dlp"]

[project.scripts]
yt = "download_video.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
